<resources>
    <string name="app_name">ColorMyViews</string>
    <string name="box_one">Box One</string>
    <string name="box_text_two">Box Two</string>
    <string name="box_text_three">Box Three</string>
    <string name="box_text_four">Box Four</string>
    <string name="box_text_five">Box Five</string>
    <string name="how_to_play">How to play</string>
    <string name="play_instructions">Play Instructions</string>
</resources>
